--- a/readme
+++ b/readme
@@ -2,10 +2,10 @@
 
 Whatsapp page using vue3.js
 
-## Schreenshot 1
+## Screenshot 1
 
 ![Layout Screenshot](/img/Screenshot%202023-07-20%20101157.png)
 
-## Schreenshot 2
+## Screenshot 2
 
 ![Layout Screenshot](/img/Screenshot%202023-07-20%20101216.png)
